--- a/GptBlog/GptBlog.csproj
+++ b/GptBlog/GptBlog.csproj
@@ -23,7 +23,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\GptBlog.Controllers\GptBlog.Controllers.csproj" />
       <ProjectReference Include="..\GptBlog.Data\GptBlog.Data.csproj" />
+      <ProjectReference Include="..\GptBlog.Services\GptBlog.Services.csproj" />
     </ItemGroup>
 
 </Project>
